unpackaged/main/default/objects/Asset/fields/RICSC_BoutiqueLocation__c.field-meta.xml
<CustomField>
        <fullName>RICSC_BoutiqueLocation__c</fullName>
        <label>Boutique Location</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>