unpackaged/main/default/objects/Asset/fields/RICSC_Brand__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>