unpackaged/main/default/objects/Asset/fields/RICSC_CareProgramStartDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CareProgramStartDate__c</fullName>
        <label>Care Program Start Date</label>
        <type>Date</type>
    </CustomField>