unpackaged/main/default/objects/Asset/fields/RICSC_CountryOfPointOfSales__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CountryOfPointOfSales__c</fullName>
        <description>Country of the wholesaler where the product was purchased</description>
        <label>Country of Point of Sales </label>
        <length>100</length>
        <type>Text</type>
    </CustomField>