unpackaged/main/default/objects/Asset/fields/RICSC_CountryOfTheBoutique__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CountryOfTheBoutique__c</fullName>
        <description>Country of the Boutique where the product was purchased</description>
        <formula>RICSC_Boutique__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of the Boutique</label>
        <type>Text</type>
    </CustomField>