unpackaged/main/default/objects/Asset/fields/RICSC_DeletedOn__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DeletedOn__c</fullName>
        <label>Deleted On</label>
        <type>DateTime</type>
    </CustomField>