unpackaged/main/default/objects/Asset/fields/RICSC_DistributionChannel__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>