unpackaged/main/default/objects/Asset/fields/RICSC_ExtensionRequestDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ExtensionRequestDate__c</fullName>
        <description>Date of warranty extention</description>
        <label>Extension Request Date</label>
        <type>DateTime</type>
    </CustomField>