unpackaged/main/default/objects/Asset/fields/RICSC_ExtensionWarrantyEndDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ExtensionWarrantyEndDate__c</fullName>
        <label>Extension Warranty End Date</label>
        <type>Date</type>
    </CustomField>