unpackaged/main/default/objects/Asset/fields/RICSC_ExtensionWarrantyStartDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ExtensionWarrantyStartDate__c</fullName>
        <label>Extension Warranty Start Date</label>
        <type>Date</type>
    </CustomField>