unpackaged/main/default/objects/Asset/fields/RICSC_ExternalID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ExternalID__c</fullName>
        <description>ID of the record in the external source system</description>
        <label>ExternalID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>