unpackaged/main/default/objects/Asset/fields/RICSC_Gift__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift</label>
        <type>Checkbox</type>
    </CustomField>