unpackaged/main/default/objects/Asset/fields/RICSC_Language__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>