unpackaged/main/default/objects/Asset/fields/RICSC_LastChangedOn__c.field-meta.xml
<CustomField>
        <fullName>RICSC_LastChangedOn__c</fullName>
        <label>Last Changed On</label>
        <type>DateTime</type>
    </CustomField>