unpackaged/main/default/objects/Asset/fields/RICSC_Picture__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Picture__c</fullName>
        <description>Formula displays the picture of the product based on the Picture URL field</description>
        <formula>IMAGE( RICSC_PictureURL__c , "Image of this product will be added soon", 300, 300)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </CustomField>