unpackaged/main/default/objects/Asset/fields/RICSC_PictureUploadDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PictureUploadDate__c</fullName>
        <label>Picture Upload Date</label>
        <type>Date</type>
    </CustomField>