unpackaged/main/default/objects/Asset/fields/RICSC_PictureURL__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PictureURL__c</fullName>
        <description>System field - hidden for normal users - Field to capture Picture URL</description>
        <label>Picture URL</label>
        <type>TextArea</type>
    </CustomField>