unpackaged/main/default/objects/Asset/fields/RICSC_PointOfSales__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PointOfSales__c</fullName>
        <label>Point of Sales</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>