unpackaged/main/default/objects/Asset/fields/RICSC_ProductsReturned__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ProductsReturned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field to hide returned products</description>
        <label>Products Returned</label>
        <type>Checkbox</type>
    </CustomField>