unpackaged/main/default/objects/Asset/fields/RICSC_ReferenceNumber__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ReferenceNumber__c</fullName>
        <description>Product number coming from the source system</description>
        <label>Reference Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>