unpackaged/main/default/objects/Asset/fields/RICSC_RegisteredOnCCP__c.field-meta.xml
<CustomField>
        <fullName>RICSC_RegisteredOnCCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered on CCP</label>
        <type>Checkbox</type>
    </CustomField>