unpackaged/main/default/objects/Asset/fields/RICSC_RegistrationDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_RegistrationDate__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </CustomField>