unpackaged/main/default/objects/Asset/fields/RICSC_Size__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Size__c</fullName>
        <description>Size of the product in the portfolio</description>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size</label>
        <type>Text</type>
    </CustomField>