unpackaged/main/default/objects/Asset/fields/RICSC_Source__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Source__c</fullName>
        <description>Source System</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_Source</valueSetName>
        </valueSet>
    </CustomField>