unpackaged/main/default/objects/Asset/fields/RICSC_TransactionID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TransactionID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction ID</label>
        <referenceTo>RICSC_Transaction__c</referenceTo>
        <relationshipLabel>Product Portfolios</relationshipLabel>
        <relationshipName>RICSC_AssetsTransaction</relationshipName>
        <type>Lookup</type>
    </CustomField>