unpackaged/main/default/objects/Asset/fields/RICSC_WarrantyEndDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_WarrantyEndDate__c</fullName>
        <label>Warranty End Date</label>
        <type>Date</type>
    </CustomField>