unpackaged/main/default/objects/Asset/fields/RICSC_WarrantyStartDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_WarrantyStartDate__c</fullName>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </CustomField>